Fix Spenden page and literCounter on mobile

--- a/src/pages/spenden.less
+++ b/src/pages/spenden.less
@@ -5,6 +5,16 @@
         grid-template-columns: 1fr !important;
         row-gap              : 5%;
         margin-top           : 50px;
+
+        .spenden-banner-box {
+            background-color: #FFFFFF !important;
+            color           : @primaryColor  !important;
+
+            h3 {
+                color: @primaryFontColorDark  !important;
+            }
+        }
+
     }
 }
 
@@ -19,7 +29,7 @@
         display         : inline-flex;
         flex-direction  : column;
         padding         : 25px;
-        background-color: fade(@primaryFontColorDark, 30) !important;
+        background-color: fade(@primaryFontColorDark, 30);
         text-align      : center;
         transition      : 0.3s ease;
         color           : #FFFFFF;
